--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,9 @@ project(os_lab2 C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(os_lab2 main.c)
+include_directories(include)
+
+file(GLOB_RECURSE SOURCES "src/*.c")
+file(GLOB_RECURSE HEADERS "include/*.h")
+
+add_executable(os_lab2 main.c ${SOURCES} ${HEADERS})
